--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,91 @@
-.App {
+.nav-ul{
+  padding: 5px;
+  margin: 0px;
+  background-color: skyblue;
+}
+.nav-ul li{
+  display: inline-block;
+  padding: 10px;
+}
+.nav-ul li a {
+  color: #fff;
+  text-decoration: none;
+  padding: 5px;
+}
+
+.product-list{
+  text-align: center;
+  margin-top: 50px;
+}
+
+.product-list ul{
+  margin: 0;
+}
+
+.product-list ul li{
+  display: inline-block;
+  width: 150px;
+  border: 1px solid skyblue;
+  padding: 5px;
+}
+
+.search-product-box{
+  width: 400px;
+  margin: 20px;
+  height: 38px;
+  padding-left: 30px;
+  border: solid 1px skyblue;
+}
+.invalid-input {
+  display: block;
+  color: red;
+  margin-top: -20px;
+  margin-left: 20px;
+}
+.nav-right {
+  text-align: right;
+}
+.register, .product{
+  margin-left: 30%;
+}
+.login {
+  margin-left: 30%;
+  margin-top: 100px;
+}
+.inputBox{
+  padding: 7px;
+  display: block;
+  border: 1px solid skyblue;  
+  width: 300px;
+  margin: 20px;
+
+}
+
+.appButton{
+  margin: 20px;
+  width: 150px;
+  padding: 10px;
+  background-color: skyblue;
+  border: solid 1px;
+  cursor: pointer;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  background-color: skyblue;
+  width: 100%;
   text-align: center;
 }
 
+.logo {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  float: left;
+  margin-top: 3px;
+  margin-left: 10px;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
